Added API_KEY middleware

--- a/app/templates/app/scraper.html
+++ b/app/templates/app/scraper.html
@@ -96,6 +96,7 @@
 <body>
 
     <h2>Web Scraper by Uchenna David Chinenye</h2>
+    <a href="{% url 'home' %}">Home</a>
 
     <form method="post">
         {% csrf_token %}
