--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -19,14 +19,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">Scrapper v1</a>
+                <a href="/" class="navbar-brand">Welcome to the homepage</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'contact' %}">Contact</a></li>
+                    <li><a href="{% url 'signup' %}">Signup</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'scraper' %}">Web Scraper</a></li>
                 </ul>
+            </div>
+            <div class="alert alert-info mt-4" role="alert" style="margin-top:70px;">
+                <strong>Project Summary:</strong>
+                This platform allows users to sign up, log in, and request API keys for shared use. It features a web scraper tool, a polling system for creating and voting on polls, and a forum for posting and answering questions. All features are secured with user authentication where required.
             </div>
         </div>
     </div>
