--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -30,7 +30,8 @@
             </div>
             <div class="alert alert-info mt-4" role="alert" style="margin-top:70px;">
                 <strong>Project Summary:</strong>
-                This platform allows users to sign up, log in, and request API keys for shared use. It features a web scraper tool, a polling system for creating and voting on polls, and a forum for posting and answering questions. All features are secured with user authentication where required.
+                This platform allows users to sign up, log in, and request API keys for shared use. It features a web scraper tool, a polling system for creating and voting on polls, and a forum for posting and answering questions. All features are secured with user authentication where required.<br />
+                CREATE AN ACCOUNT, LOGIN AND GET YOUR X-API-KEY TO CONNECT YOUR FRONTEND TO THE BACKEND.
             </div>
         </div>
     </div>
